# gridzero

./: .gitignore  README.md
app/: .env.example  .env.save  next.config.js  package-lock.json  package.json  resolver.js
app/src/app/: layout.js  page.js
app/src/app/play/: page.js
app/src/components/: GridZero.js  GridZeroV2.js  GridZeroV3.js  HowToPlay.js  Providers.js  TheGrid.js
app/src/lib/: abi.js  chain.js  contracts.js  prover.js  zkverify-client.js
app/src/pages/api/: mine.js  settle.js  state.js
contracts/: .env.mainnet  DEPLOY.s.sol  ZeroToken.sol  hardhat.config.ts  package-lock.json  package.json
contracts/deployments/: v2-base-mainnet.json
contracts/scripts/: deploy-base-mainnet.ts  deploy-gridzero-v3.js  deploy-v2-base-mainnet.ts
contracts/src/: GridZero.sol  GridZeroOre.sol  GridZeroV2.sol  GridZeroV3.sol  GridZeroV4.sol  IZkVerifyAttestation.sol
contracts/src/mocks/: MockZkVerifyAttestation.sol
contracts/test/: GridZero.test.ts
ezkl/: build.sh  difficulty-service.ts  model.py
risc0/: Cargo.toml  leaderboard-service.ts
risc0/host/: Cargo.toml
risc0/host/src/: main.rs
risc0/methods/: Cargo.toml
risc0/methods/guest/: Cargo.toml
risc0/methods/guest/src/: main.rs
scripts/: register-domains.mjs
services/: game-engine.ts  zkverify-service.ts
