[package]
name = "gridzero-leaderboard"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["host", "methods"]

[profile.release]
lto = true

[patch.crates-io]
# Uncomment if needed for specific risc0 version compatibility
# risc0-zkvm = { git = "https://github.com/risc0/risc0", tag = "v2.2.0" }
